made header to have a fixed position with a z-index of 10 and width of 100%

--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+header {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 10;
+}
 
 .ul.pagination {
     display: inline-block;
